engine/crates/engine-v2/query-planning/src/tests/snapshots/engine_v2_query_planning__tests__shared_root__all_fields-solved.snap
---
source: engine/crates/engine-v2/query-planning/src/tests/shared_root.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"price\", color=forestgreen ]\n    2 [ label = \"category\", color=forestgreen ]\n    3 [ label = \"id\", color=forestgreen ]\n    4 [ label = \"name\", color=forestgreen ]\n    5 [ label = \"Root#category\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    6 [ label = \"products@Root#category\", shape=box, color=dodgerblue, color=forestgreen ]\n    7 [ label = \"Root#name\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    8 [ label = \"products@Root#name\", shape=box, color=dodgerblue, color=forestgreen ]\n    9 [ label = \"Root#price\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    10 [ label = \"products@Root#price\", shape=box, color=dodgerblue, color=forestgreen ]\n    11 [ label = \"id@Root#price\", shape=box, color=dodgerblue, color=forestgreen ]\n    12 [ label = \"price@Root#price\", shape=box, color=dodgerblue, color=forestgreen ]\n    13 [ label = \"name@Root#name\", shape=box, color=dodgerblue, color=forestgreen ]\n    14 [ label = \"id@Root#name\", shape=box, color=dodgerblue, style=dashed ]\n    15 [ label = \"id@Root#category\", shape=box, color=dodgerblue, style=dashed ]\n    16 [ label = \"category@Root#category\", shape=box, color=dodgerblue, color=forestgreen ]\n    17 [ label=\"\", style=dashed]\n    0 -> 5 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    5 -> 6 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    0 -> 7 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    7 -> 8 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    0 -> 9 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    9 -> 10 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    10 -> 11 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    11 -> 3 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    10 -> 12 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    12 -> 1 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    8 -> 13 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    13 -> 4 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    8 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    14 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    15 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 16 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    16 -> 2 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    17 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "price", steiner=1 ]
    2 [ label = "category", steiner=1 ]
    3 [ label = "id", steiner=1 ]
    4 [ label = "name", steiner=1 ]
    5 [ label = "Root#category", steiner=1 ]
    6 [ label = "products@Root#category", steiner=1 ]
    7 [ label = "Root#name", steiner=1 ]
    8 [ label = "products@Root#name", steiner=1 ]
    9 [ label = "Root#price", steiner=1 ]
    10 [ label = "products@Root#price", steiner=1 ]
    11 [ label = "id@Root#price", steiner=1 ]
    12 [ label = "price@Root#price", steiner=1 ]
    13 [ label = "name@Root#name", steiner=1 ]
    14 [ label = "id@Root#name", steiner=0 ]
    15 [ label = "id@Root#category", steiner=0 ]
    16 [ label = "category@Root#category", steiner=1 ]
    17 [ label="", style=dashed]
    0 -> 5 [ cost=0, steiner=1]
    5 -> 6 [ cost=0, steiner=1]
    0 -> 7 [ cost=0, steiner=1]
    7 -> 8 [ cost=0, steiner=1]
    0 -> 9 [ cost=0, steiner=1]
    9 -> 10 [ cost=0, steiner=1]
    10 -> 11 [ cost=0, steiner=1]
    11 -> 3 [ cost=0, steiner=1]
    10 -> 12 [ cost=0, steiner=1]
    12 -> 1 [ cost=0, steiner=1]
    8 -> 13 [ cost=0, steiner=1]
    13 -> 4 [ cost=0, steiner=1]
    8 -> 14 [ cost=0, steiner=0]
    14 -> 3 [ cost=0, steiner=0]
    6 -> 15 [ cost=0, steiner=0]
    15 -> 3 [ cost=0, steiner=0]
    6 -> 16 [ cost=0, steiner=1]
    16 -> 2 [ cost=0, steiner=1]
    17 -> 0 [ cost=0, steiner=0]
}
