engine/crates/engine-v2/query-planning/src/tests/snapshots/engine_v2_query_planning__tests__shared_root__single_field-graph.snap
---
source: engine/crates/engine-v2/query-planning/src/tests/shared_root.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"price\" ]\n    2 [ label = \"products\" ]\n    7 [ label = \"Root#price\", shape=box, color=blue ]\n    8 [ label = \"products@Root#price\", shape=box, style=dashed, color=blue ]\n    9 [ label = \"price@Root#price\", shape=box, style=dashed, color=blue ]\n    0 -> 2 [ label = \"\" ]\n    0 -> 7 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    0 -> 7 [ label = \"\", style=dashed ]\n    7 -> 8 [ label = \"\", color=blue,fontcolor=blue ]\n    8 -> 2 [ label = \"\", color=turquoise ]\n    2 -> 1 [ label = \"\" ]\n    8 -> 9 [ label = \"\", color=blue,fontcolor=blue ]\n    9 -> 1 [ label = \"\", color=turquoise ]\n}\n"
---
digraph {
    0 [ root]
    1 [ price]
    2 [ products]
    7 [ Root#price]
    8 [ products@Root#price]
    9 [ price@Root#price]
    0 -> 2 [ label = "Field" ]
    0 -> 7 [ label = "CreateChildResolver", cost=1 ]
    0 -> 7 [ label = "HasChildResolver" ]
    7 -> 8 [ label = "CanProvide", cost=0 ]
    8 -> 2 [ label = "Provides" ]
    2 -> 1 [ label = "Field" ]
    8 -> 9 [ label = "CanProvide", cost=0 ]
    9 -> 1 [ label = "Provides" ]
}
